<resources>
    <string name="app_name">GoShift</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Day_Sun1">ראשון</string>
    <string name="Day_Mon2">שני</string>
    <string name="Day_Tue3">שלישי</string>
    <string name="Day_Wed4">רביעי</string>
    <string name="Day_Thu5">חמישי</string>
    <string name="Day_Fri6">שישי</string>
    <string name="Day_Sat7">שבת</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="Title_Day">יום</string>
    <string name="Title_Morning">בוקר</string>
    <string name="Title_Noon">צהריים</string>
    <string name="Title_Evening">ערב</string>
    <string name="Title_Night">לילה</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string-array name="number_test">
        <item>אחד</item>
        <item>שתיים</item>
        <item>שלוש</item>
    </string-array>





</resources>