<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_em__scheduling_ID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_blue_background"
    tools:context="Fragments.Em_Scheduling_Fragment">

    <!--<android.support.constraint.ConstraintLayout-->
    <!--android:id="@+id/linearLayoutCompat"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:context="Fragments.Em_Scheduling_Fragment"-->
    <!--tools:showIn="@layout/app_bar_main">-->

    <Button
        android:id="@+id/Clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="32dp"
        android:text="ניקוי"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send_button"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textStyle="bold"
        android:text="שליחה"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Clear_button" />

    <CheckBox
        android:id="@+id/SuNi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/MoNi"
        app:layout_constraintEnd_toStartOf="@+id/ID_Title_Night" />

    <CheckBox
        android:id="@+id/SuEv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_TitleLeft"
        app:layout_constraintTop_toTopOf="@+id/MoEv" />

    <CheckBox
        android:id="@+id/SuMo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_TitleLeft"
        app:layout_constraintTop_toTopOf="@+id/MoMo" />

    <CheckBox
        android:id="@+id/MoNi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toStartOf="@+id/SuNi"
        app:layout_constraintTop_toBottomOf="@+id/MoEv" />

    <CheckBox
        android:id="@+id/MoEv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TuEv"
        app:layout_constraintStart_toEndOf="@+id/TuEv" />

    <CheckBox
        android:id="@+id/MoMo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/TuMo"
        app:layout_constraintEnd_toEndOf="@+id/ID_Day_Mon2" />

    <!--=====================Sunday======================-->

    <CheckBox
        android:id="@+id/TuNi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        app:layout_constraintStart_toEndOf="@+id/WeNi"
        app:layout_constraintTop_toTopOf="@+id/MoNi" />

    <CheckBox
        android:id="@+id/TuEv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/WeEv"
        app:layout_constraintStart_toEndOf="@+id/WeEv" />

    <CheckBox
        android:id="@+id/TuMo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/WeMo"
        app:layout_constraintStart_toEndOf="@+id/WeMo" />

    <CheckBox
        android:id="@+id/WeNi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TuNi"
        app:layout_constraintStart_toEndOf="@+id/ThNi" />

    <!--====================Monday======================-->

    <CheckBox
        android:id="@+id/WeEv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ThEv"
        app:layout_constraintStart_toEndOf="@+id/ThEv" />

    <CheckBox
        android:id="@+id/WeMo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ThMo"
        app:layout_constraintEnd_toEndOf="@+id/ID_Day_Wed4" />

    <CheckBox
        android:id="@+id/ThNi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/WeNi"
        app:layout_constraintStart_toEndOf="@+id/FrNi" />

    <CheckBox
        android:id="@+id/ThEv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/FrEv"
        app:layout_constraintStart_toEndOf="@+id/FrEv" />

    <!--====================Tuesday====================-->

    <CheckBox
        android:id="@+id/ThMo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/FrMo"
        app:layout_constraintStart_toEndOf="@+id/FrMo" />

    <CheckBox
        android:id="@+id/FrNi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintStart_toEndOf="@+id/SatNi"
        app:layout_constraintTop_toTopOf="@+id/ThNi" />

    <CheckBox
        android:id="@+id/FrEv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toEndOf="@+id/SatEv"
        app:layout_constraintTop_toBottomOf="@+id/FrMo" />

    <CheckBox
        android:id="@+id/FrMo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toEndOf="@+id/SatMo"
        app:layout_constraintTop_toBottomOf="@+id/ID_Day_Fri6" />

    <!--==================Wednesday======================-->

    <CheckBox
        android:id="@+id/SatNi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/FrNi"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/SatEv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/FrEv"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/SatMo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/FrMo"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/Week_spinner"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_TopDays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--=====================Thursday=====================-->

    <TextView
        android:id="@+id/ID_Title_Day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/Title_Day"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_TitleRight"
        app:layout_constraintTop_toTopOf="@+id/ID_Day_Sun1" />

    <TextView
        android:id="@+id/ID_Title_Morning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="9dp"
        android:text="@string/Title_Morning"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/SuMo"
        app:layout_constraintTop_toTopOf="@+id/SuMo" />

    <TextView
        android:id="@+id/ID_Title_Evening"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Title_Evening"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/SuEv"
        app:layout_constraintStart_toStartOf="@+id/guideline_TitleLeft" />

    <TextView
        android:id="@+id/ID_Title_Night"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="5dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Title_Night"
        app:layout_constraintBottom_toBottomOf="@+id/SuNi"
        app:layout_constraintStart_toStartOf="@+id/guideline_TitleLeft" />

    <!--=====================Friday=====================-->

    <TextView
        android:id="@+id/ID_Day_Sun1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginBottom="17dp"
        android:text="@string/Day_Sun1"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SuMo"
        app:layout_constraintStart_toStartOf="@+id/SuMo" />

    <TextView
        android:id="@+id/ID_Day_Mon2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/Day_Mon2"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ID_Day_Sun1"
        app:layout_constraintEnd_toStartOf="@+id/ID_Day_Sun1" />

    <TextView
        android:id="@+id/ID_Day_Tue3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/Day_Tue3"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ID_Day_Wed4"
        app:layout_constraintEnd_toStartOf="@+id/MoMo" />

    <TextView
        android:id="@+id/ID_Day_Wed4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/Day_Wed4"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ID_Day_Thu5"
        app:layout_constraintStart_toEndOf="@+id/ID_Day_Thu5" />

    <!--====================Saturday=========================-->

    <TextView
        android:id="@+id/ID_Day_Thu5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="23dp"
        android:text="@string/Day_Thu5"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ID_Day_Fri6"
        app:layout_constraintTop_toTopOf="@+id/guideline_TopDays" />

    <TextView
        android:id="@+id/ID_Day_Fri6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Day_Fri6"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ID_Day_Thu5"
        app:layout_constraintStart_toStartOf="@+id/FrMo" />

    <TextView
        android:id="@+id/ID_Day_Sat7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:text="@string/Day_Sat7"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ID_Day_Fri6"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_TopDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="99dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_BottomDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="333dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_TitleRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_TitleLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="323dp" />

</android.support.constraint.ConstraintLayout>

